@@ -8054,3 +8054,5 @@ EPRINTS-3.1-beta-2
  * Added an epadmin command to drop unused cache tables
  * Alpha FTP daemon - provides FTP access to the user's inbox
 
+2009-02-24 cjg + dct
+ * Tidyup & refactoring on FormatRisks plugin.
